# db_link

./: .gitignore  .md  CODEX_FIX_PROMPT.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  gradle.properties  gradlew.bat  local.properties.example  settings.gradle.kts  stability_config.conf
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  deepsky_raw_jni.cpp  raw_domain_debug_jni.cpp  usb_native.c
app/src/main/cpp/raw_ai/backends/: inference_backend.h  litert_compiled_backend.cpp  litert_compiled_backend.h
app/src/main/cpp/raw_ai/contract/: model_manifest.cpp  model_manifest.h
app/src/main/cpp/raw_ai/jni/: raw_ai_jni.cpp  raw_ai_jni.h
app/src/main/cpp/raw_ai/runtime/: backend_factory.cpp  backend_factory.h  raw_ai_engine.cpp  raw_ai_engine.h  serial_worker.cpp  serial_worker.h
docs/: BETA_REVIEW.md  codex-usb-scp-fix-log-2026-04-04.md  current-app-summary.md  feature-map.md  modernization-audit.md  setup.md  transfer-feature-matrix.md  transfer-verification-checklist.md  usb-scp-fix-log-2026-04-04.md
docs/raw-ai/: phase5-dual-model-android-runtime.md  pr4-raw-input-domain-verification.md  pr4-sample-inventory.json  pr45-three-model-test-dataset.json  pr5-bayer-domain-preprocessor.md  pr5-om5-markii-dataset.json  pr6-model-variant-comparison.md
tools/raw_ai/: benchmark_dual_tflite.py  benchmark_mobile_tflite.py  benchmark_model_variants.py  build_raw_domain_dataset.py  compare_raw_domain_tensors.py  export_standard_onnx.py  finalize_tflite_contract.py  generate_raw_domain_reference.py  run_onnx2tf.py  wrap_onnx2tf_saved_model.py
(+246 files in other folders)
